/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java application project to get you started.
 * For more details on building Java & JVM projects, please refer to https://docs.gradle.org/8.14/userguide/building_java_projects.html in the Gradle documentation.
 */

plugins {
    // Apply the application plugin to add support for building a CLI application in Java.
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.14'
    id 'com.github.johnrengelman.shadow' version '8.1.1'
}


repositories {
    // Use Maven Central for resolving dependencies.
    mavenCentral()
    gradlePluginPortal() 
}

javafx {
    version = "24"  // o la versión que uses
    modules = [ 'javafx.controls', 'javafx.fxml'] // Agrega módulos que necesites

}

dependencies {
    // Use JUnit Jupiter for testing.
    testImplementation libs.junit.jupiter

    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    implementation("org.xerial:sqlite-jdbc:3.36.0.3")

    // This dependency is used by the application.
    implementation libs.guava

    implementation 'org.openjfx:javafx-controls:24.0.1'  // Usa la versión que necesites
    implementation 'org.openjfx:javafx-fxml:24.0.1'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(24) // <--- Asegúrate de que esto sea 24
    }
}

application {
    mainClass = 'com.T4C30.Backtrack.Lanzar'
}

tasks.named('compileJava') {
    options.compilerArgs.addAll(['--enable-preview'])
}

shadowJar {
    manifest {
        attributes(
            'Main-Class': 'com.T4C30.Backtrack.Lanzar'  // Asegúrate de que esta sea tu clase principal
        )
    }
    configurations = [project.configurations.runtimeClasspath]
}
